--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<script
+			src="https://kit.fontawesome.com/4f96abf09e.js"
+			crossorigin="anonymous"
+		></script>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -45,4 +49,43 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 	</body>
+	<script type="text/javascript">
+		window._chatlio = window._chatlio || []
+		!(function() {
+			var t = document.getElementById("chatlio-widget-embed")
+			if (t && window.ChatlioReact && _chatlio.init)
+				return void _chatlio.init(t, ChatlioReact)
+			for (
+				var e = function(t) {
+						return function() {
+							_chatlio.push([t].concat(arguments))
+						}
+					},
+					i = [
+						"configure",
+						"identify",
+						"track",
+						"show",
+						"hide",
+						"isShown",
+						"isOnline",
+						"page",
+						"open",
+						"showOrHide"
+					],
+					a = 0;
+				a < i.length;
+				a++
+			)
+				_chatlio[i[a]] || (_chatlio[i[a]] = e(i[a]))
+			var n = document.createElement("script"),
+				c = document.getElementsByTagName("script")[0]
+			;(n.id = "chatlio-widget-embed"),
+				(n.src = "https://w.chatlio.com/w.chatlio-widget.js"),
+				(n.async = !0),
+				n.setAttribute("data-embed-version", "2.3")
+			n.setAttribute("data-widget-id", "be25a1c1-3de7-404c-6800-3d16ea1c11de")
+			c.parentNode.insertBefore(n, c)
+		})()
+	</script>
 </html>
